src-tauri/build_log_cleanup.txt
    Checking ndarray v0.15.6
    Checking tauri-app v0.1.0 (D:\WindowsProyects\Antigravity\Fork\src-tauri)
warning: unused imports: `Deserialize` and `Serialize`
 --> src\core\auth.rs:2:13
  |
2 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unreachable expression
  --> src\core\updater.rs:50:5
   |
47 |     return Ok(format!("Updated to version {}", manifest.version));
   |     ------------------------------------------------------------- any code following this expression is unreachable
...
50 |     Ok("Update check simulated. No remote repo configured yet.".to_string())
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable expression
   |
   = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `SessionInputValue<'_>: From<ArrayBase<OwnedRepr<u32>, Dim<[usize; 2]>>>` is not satisfied
  --> src\core\local_llm.rs:45:18
   |
45 |             .run(ort::inputs!["input_ids" => input_tensor].map_err(|e| e.to_string())?)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<ArrayBase<OwnedRepr<u32>, Dim<[usize; 2]>>>` is not implemented for `SessionInputValue<'_>`
   |
help: the following other types implement trait `From<T>`
  --> C:\Users\IK\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\ort-2.0.0-rc.11\src\session\input.rs:24:1
   |
24 | impl<'v, T: ValueTypeMarker + ?Sized> From<ValueRefMut<'v, T>> for SessionInputValue<'v> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SessionInputValue<'_>` implements `From<ValueRefMut<'_, T>>`
...
29 | impl<'v, T: ValueTypeMarker + ?Sized> From<ValueRef<'v, T>> for SessionInputValue<'v> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SessionInputValue<'_>` implements `From<ort::value::ValueRef<'_, T>>`
...
34 | impl<T: ValueTypeMarker + ?Sized> From<Value<T>> for SessionInputValue<'_> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SessionInputValue<'_>` implements `From<ort::value::Value<T>>`
...
39 | impl<'v, T: ValueTypeMarker + ?Sized> From<&'v Value<T>> for SessionInputValue<'v> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SessionInputValue<'_>` implements `From<&ort::value::Value<T>>`
   = note: this error originates in the macro `ort::inputs` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `map_err` found for struct `Vec<(Cow<'_, str>, SessionInputValue<'_>)>` in the current scope
  --> src\core\local_llm.rs:45:60
   |
45 |             .run(ort::inputs!["input_ids" => input_tensor].map_err(|e| e.to_string())?)
   |                                                            ^^^^^^^
   |
help: there is a method `sink_map_err` with a similar name
   |
45 |             .run(ort::inputs!["input_ids" => input_tensor].sink_map_err(|e| e.to_string())?)
   |                                                            +++++

error[E0282]: type annotations needed
  --> src\core\local_llm.rs:45:69
   |
45 |             .run(ort::inputs!["input_ids" => input_tensor].map_err(|e| e.to_string())?)
   |                                                                     ^  - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
45 |             .run(ort::inputs!["input_ids" => input_tensor].map_err(|e: /* Type */| e.to_string())?)
   |                                                                      ++++++++++++

error[E0599]: no method named `shape` found for tuple `(&ort::tensor::Shape, &[f32])` in the current scope
  --> src\core\local_llm.rs:54:27
   |
54 |             output_tensor.shape(),
   |                           ^^^^^ method not found in `(&ort::tensor::Shape, &[f32])`

Some errors have detailed explanations: E0277, E0282, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `tauri-app` (lib) generated 2 warnings
error: could not compile `tauri-app` (lib) due to 4 previous errors; 2 warnings emitted
